...
            validator: (value) {
              if (value == null || value.isEmpty) {
                return 'Please enter your name';
              }
              return null;
            },
            key: const Key('nameField'),
          ),
          const SizedBox(height: 10),
          CustomTextField(
            label: 'Email',
            icon: Icons.email_outlined,
            keyboardType: TextInputType.emailAddress,
...
            validator: (value) {
              if (value == null || value.isEmpty || !value.contains('@')) {
                return 'Please enter your email';
              }
              return null;
            },
            key: const Key('emailField'),
          ),
          const SizedBox(height: 10),
          CustomTextField(
            label: 'Phone Number',
            icon: Icons.phone_outlined,
            keyboardType: TextInputType.phone,
...
                return 'Please enter your phone number';
              } else if (RegExp(r'[a-zA-Z]').hasMatch(value)) {
                return 'Please enter a valid phone number';
              }
              return null;
            },
            key: const Key('phoneField'),
          ),
          const SizedBox(height: 10),
          CustomTextField(
            label: 'Password',
            icon: Icons.lock_outline,
            obscureText: true,
...
            validator: (value) {
              if (value == null || value.isEmpty) {
                return 'Please enter your password';
              }
              return null;
            },
            key: const Key('passwordField'),
          ),
          const SizedBox(height: 20),
          CustomButton(
            label: 'Sign Up',
            onPressed: _signup,
            key: const Key('submitSignUpButton'),
          ),
        ],
      ),
    );
  }
}
...
