...
      appBar: AppBar(
        title: const Text("Gift List Manager"),
        actions: [
          IconButton(
            icon: const Icon(Icons.person),
            onPressed: () => navigateWithAnimation(ProfilePage()),
            key: const Key('navigateToProfileButton'),
          ),
          IconButton(
            icon: const Icon(Icons.brightness_6),
            onPressed: widget.toggleTheme,
          ),
          IconButton(
...
                },
                style: ElevatedButton.styleFrom(
                  foregroundColor: theme.colorScheme.onPrimary,
                  backgroundColor: theme.colorScheme.primary,
                  textStyle: const TextStyle(fontWeight: FontWeight.bold),
                ),
                child: const Text("Create Your Own Event/List"),
                key: const Key('navigateToEventListButton'),
              ),
            ),
            CustomSearchBar(
              onSearch: (query) {
                setState(() {
                  searchQuery = query;
...
              ),
            ),
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('addFriendButton'),
        onPressed: () async {
          final userId = await _authService.getCurrentUser();
          if (userId.isNotEmpty) {
            showDialog(
              context: context,
              builder: (context) => AddFriendDialog(
...
